--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/sandwich.html">Lasagna</a>
-    <a href="recipes/soup.html">Lasagna</a>
+    <a href="recipes/sandwich.html">Sandwich</a>
+    <a href="recipes/soup.html">Soup</a>
 </body>
 </html>
